RESOLVED FIXED 260007
Crash under NetworkResourceLoader::sendDidReceiveResponsePotentiallyInNewBrowsingContextGroup()
https://bugs.webkit.org/show_bug.cgi?id=260007
Summary Crash under NetworkResourceLoader::sendDidReceiveResponsePotentiallyInNewBrow...
Chris Dumez
Reported 2023-08-09 20:19:42 PDT
Crash under NetworkResourceLoader::sendDidReceiveResponsePotentiallyInNewBrowsingContextGroup(): ``` 50 WebKit::NetworkResourceLoader::identifier() const <== 50 WebKit::NetworkResourceLoader::sendDidReceiveResponsePotentiallyInNewBrowsingContextGroup(WebCore::ResourceResponse const&, WebKit::PrivateRelayed, bool) 50 WebKit::NetworkResourceLoader::didReceiveResponse(WebCore::ResourceResponse&&, WebKit::PrivateRelayed, WTF::CompletionHandler<void (WebCore::PolicyAction)>&&)::$_17::operator()() 50 WTF::Detail::CallableWrapper<WebKit::NetworkResourceLoader::didReceiveResponse(WebCore::ResourceResponse&&, WebKit::PrivateRelayed, WTF::CompletionHandler<void (WebCore::PolicyAction)>&&)::$_17, void>::call() 50 WTF::Function<void ()>::operator()() const 50 WTF::CompletionHandler<void ()>::operator()() 50 WebKit::NetworkResourceLoader::processClearSiteDataHeader(WebCore::ResourceResponse const&, WTF::CompletionHandler<void ()>&&) 50 WebKit::NetworkResourceLoader::didReceiveResponse(WebCore::ResourceResponse&&, WebKit::PrivateRelayed, WTF::CompletionHandler<void (WebCore::PolicyAction)>&&) 50 WebKit::NetworkLoad::notifyDidReceiveResponse(WebCore::ResourceResponse&&, WebKit::NegotiatedLegacyTLS, WebKit::PrivateRelayed, WTF::CompletionHandler<void (WebCore::PolicyAction)>&&) ```
Attachments
Chris Dumez
Comment 1 2023-08-09 20:20:00 PDT
Chris Dumez
Comment 2 2023-08-09 20:25:22 PDT
EWS
Comment 3 2023-08-10 08:41:30 PDT
Committed 266763@main (66ec7a05017c): <https://commits.webkit.org/266763@main> Reviewed commits have been landed. Closing PR #16552 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.