Crash under NetworkResourceLoader::sendDidReceiveResponsePotentiallyInNewBrowsingContextGroup() https://bugs.webkit.org/show_bug.cgi?id=260007 rdar://110454775

Reviewed by David Kilzer.

It looks like takeNetworkResourceLoader() returns null even though the
NetworkResourceLoader is still alive. I am not sure how this can happen though
I suspect it could be related to keptAlive loads.

I am dealing with this case to avoid the crash and adding error logging to
help figure out how this can happen.

* Source/WebKit/NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::sendDidReceiveResponsePotentiallyInNewBrowsingContextGroup):

Canonical link: https://commits.webkit.org/266763@main